# rover_config

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: marta.yaml  nav2_params.yaml  nmea_serial_driver.yaml
include/rover_config/: robot.hpp
launch/: config_test.launch
maps/: tb3_world_big.pgm  tb3_world_big.yaml
models/mars_yard/: model.sdf
rviz/: gamepad_rover.rviz  gamepad_sim.rviz  nav2_default_view.rviz  rover_gazebo.rviz  simple_sim.rviz
src/: parser.cpp  robot.cpp
urdf/: bb2.gazebo  bb2.xacro  exoter.gazebo  exoter.xacro  gnss.gazebo  gnss.xacro  imu.gazebo  imu.xacro  lidar.gazebo  lidar.xacro  marta.gazebo  marta.xacro  model.xml  ptu.gazebo  ptu.xacro  rover_dummy.gazebo  rover_dummy.urdf  rover_dummy.xacro  scalebot.xml  stim300.gazebo  stim300.xacro  test.xml  vlp_16.gazebo  vlp_16.xacro
urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
urdf/log/: latest_build
worlds/: empty.world  mars_yard.world  tb3_world.model
